--- a/web/assets/style/main.css
+++ b/web/assets/style/main.css
@@ -2,3 +2,21 @@ body {
 	background: #1da1f2;
 	color: #fff;
 }
+
+.loading {
+	background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, rgba(0, 0, 0, 0.15) 25%, rgba(0, 0, 0, 0.15) 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, rgba(0, 0, 0, 0.15) 75%, rgba(0, 0, 0, 0.15));
+	background-size: 40px 40px;
+	animation: 2s linear 0s reverse none infinite progress-bar-stripes;
+	-webkit-animation: progress-bar-stripes 2s linear infinite reverse;
+}
+
+
+@-webkit-keyframes progress-bar-stripes {
+  from { background-position: 40px 0px; } to { background-position: 0px 0px; }
+}
+@-o-keyframes progress-bar-stripes {
+  from { background-position: 40px 0px; } to { background-position: 0px 0px; }
+}
+@keyframes progress-bar-stripes {
+  from { background-position: 40px 0px; } to { background-position: 0px 0px; }
+}
