--- a/web/assets/style/main.css
+++ b/web/assets/style/main.css
@@ -3,20 +3,50 @@ body {
 	color: #fff;
 }
 
+h2 {
+	font-size: 24px;
+	margin-top: 80px;
+	margin-bottom: 30px;
+}
+
+.animation {
+	transition: opacity 0.2s ease-in-out;
+}
+
 .loading {
-	background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, rgba(0, 0, 0, 0.15) 25%, rgba(0, 0, 0, 0.15) 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, rgba(0, 0, 0, 0.15) 75%, rgba(0, 0, 0, 0.15));
-	background-size: 40px 40px;
-	animation: 2s linear 0s reverse none infinite progress-bar-stripes;
-	-webkit-animation: progress-bar-stripes 2s linear infinite reverse;
+	animation: 0.2s ease-in-out 0s alternate none infinite progress-bar-stripes;
+	-webkit-animation: progress-bar-stripes 0.2s ease-in-out infinite alternate;
 }
 
+@-webkit-keyframes progress-bar-stripes { from { opacity: 1 } to { opacity: 0.5; } }
+@-o-keyframes progress-bar-stripes {      from { opacity: 1 } to { opacity: 0.5; } }
+@keyframes progress-bar-stripes {         from { opacity: 1 } to { opacity: 0.5; } }
 
-@-webkit-keyframes progress-bar-stripes {
-  from { background-position: 40px 0px; } to { background-position: 0px 0px; }
+.image {
+	text-align: center;
+	margin-bottom: 20px;
 }
-@-o-keyframes progress-bar-stripes {
-  from { background-position: 40px 0px; } to { background-position: 0px 0px; }
+
+	.image img {
+		cursor: pointer;
+		box-shadow: 0 0 8px rgba(0,0,0,0.5);
+		margin-bottom: 5px;
+	}
+
+.mark {
+	position: absolute;
+	width: 32px;
+	height: 32px;
+	border-radius: 32px;
+	font-size: 24px;
+	color: rgba(0,0,0,0.3);
+	text-align: center;
+	z-index: 1000;
 }
-@keyframes progress-bar-stripes {
-  from { background-position: 40px 0px; } to { background-position: 0px 0px; }
+
+.mark.success {
+	background-color: #00df44;
+}
+.mark.error {
+	background-color: #f81f2e;
 }
