--- a/web/assets/style/main.css
+++ b/web/assets/style/main.css
@@ -24,13 +24,16 @@ h2 {
 
 .image {
 	text-align: center;
-	margin-bottom: 20px;
+	margin: 0 50px 50px 0;
+	float: left;
 }
 
 	.image img {
 		cursor: pointer;
 		box-shadow: 0 0 8px rgba(0,0,0,0.5);
 		margin-bottom: 5px;
+		max-width: 128px;
+		max-height: 128px;
 	}
 
 .mark {
@@ -49,4 +52,15 @@ h2 {
 }
 .mark.error {
 	background-color: #f81f2e;
+}
+
+.page-wrap {
+  min-height: 100%;
+}
+
+footer {
+	margin-top: 100px;
+	background: #fff;
+	padding: 50px 0;
+	text-align: right;
 }
